# controllers/User.js
@@ -26,7 +26,7 @@ module.exports.logUser = function logUser (req, res, next) {
 
       //Enable Session
       req.session.loggedIn = true;
-      req.session.id = response.body.id;
+      req.session.logged_id = response[0].id;
       
       utils.writeJson(res, response);
     })
@@ -42,14 +42,27 @@ module.exports.logOutUser = function logOutUser(req, res, next) {
 }
 
 module.exports.registerUser = function registerUser (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  
+  var  first_name= req.swagger.params['first_name'].value;
+  var  last_name= req.swagger.params['last_name'].value;
+  var  email= req.swagger.params['email'].value;
+  var  password=req.swagger.params['password'].value;
+  var  password_confirm= req.swagger.params['password_confirm'].value;
+  
+  var body = {
+    "first_name": first_name,
+    "last_name": last_name,
+    "email": email,
+    "password": password,
+    "password_confirm": password_confirm
+  }
 
   User.registerUser(body)
     .then(function (response) {
 
       //Enable Session
       req.session.loggedIn = true;
-      req.session.id = response.body.id;
+      req.session.logged_id = response[0].id;
       
       utils.writeJson(res, response);
     })
